<resources>
    <string name="app_name" translatable="false">Monkey Tree</string>


    <!-- MonkeyActivity -->
    <string name="dialog_permission_message">
        We are going to fix contacts, so we need contact permissions, right?
    </string>
    <string name="btn_retry">Grant permissions</string>
    <string name="btn_quit">Quit apps</string>
    <string name="all_updated">All phonetic data are updated!</string>
    <string name="all_cleared">All phonetic data are cleared!</string>
    <string name="dialog_reading">Reading contacts…</string>
    <string name="dialog_fixing">Fixing contacts…</string>


    <!-- InstructionFragment -->
    <string name="main_header">
        This app is designed to let the operating system sort contacts in the right order, by
        updating phonetic names and types of your contacts.
    </string>
    <string name="main_description">
        For Chinese contacts, phonetic name is Pinyin, which will be translated from the contact
        name. Phonetic type is PINYIN. So that system will use phonetic last name to determine the
        order.

        \n\nFor Latin contacts, phonetic name and type will be removed. So that system will use
        contact first name to determine the order.

        \n\nRemove all phonetic data: Some systems can handle Chinese name correctly. You may want
        to try to clear phonetic data. However, the benefit of using phonetic data is that they can
        be synced across devices and benefit all of them.

        \n\nBackground monitoring is a system mechanism requires Android N or above. When contacts
        changed, system will trigger this app\'s background task to update phonetic data or show
        notification. It won\'t consume battery unless contacts data really changed.
    </string>
    <string name="btn_update_all">Update all phonetic data</string>
    <string name="btn_clear_all">Remove all phonetic data</string>
    <string name="btn_learn_more">How this works</string>
    <string name="toast_data_missing_message">
        Transliterator data is missing, can not process
    </string>

    <string name="job_description">
        Enable background listening on contacts changes. Also choose whether update phonetic data
        automatically in the background, or just notify you with a notification. Notice that it
        won\'t consume battery unless contacts data really changed.
    </string>
    <string name="switch_monitoring">Enable Listening</string>
    <string name="switch_background">Auto Update</string>


    <!-- ContactSelectFragment -->
    <string name="contact_list_description">
        This is the preview of phonetic names that need to be updated. Please select all contacts
        you want to update.
    </string>
    <string name="contact_list_empty">
        All phonetic data are up-to-dated.
    </string>
    <string name="contact_divider" translatable="false"><![CDATA[=>]]></string>
    <string name="btn_confirm">Update selected contacts</string>
    <string name="btn_done">Done</string>


    <!-- Background notification -->
    <string name="notification_title">Phonetic data need update</string>
    <string name="notification_message">Click to update phonetic data</string>
</resources>
